NavBar Overlapping issue Fixed

--- a/css/navbar.css
+++ b/css/navbar.css
@@ -22,6 +22,7 @@ i {
   padding: 0px;
   position: fixed;
   width: 100%;
+  z-index:1;
 }
 #navbarSupportedContent {
   overflow: hidden;
